package proyecto;

/**
 * Clase principal
 * @class main
 * @author Equipo 1
 * @see <a href="https://github.com/ldhLogistica/logisticaTerrestre/blob/master/src/main/java/proyecto/AstarSearch.java"> Repositorio Github - Main</a>
 */
public class AstarSearch {

	public static void main(String[] args) {

		new LogisticaGUIFrame();
	}
}