@startuml

title __LOGISTICATERRESTRE's Class Diagram__\n

  namespace proyecto {
    class proyecto.AStar {
    }
  }
  

  namespace proyecto {
    class proyecto.AgregarVehiculoGUI {
    }
  }
  

  namespace proyecto {
    class proyecto.AgregarVehiculoGUIFrame {
    }
  }
  

  namespace proyecto {
    class proyecto.AstarSearch {
    }
  }
  

  namespace proyecto {
    class proyecto.Graph {
    }
  }
  

  namespace proyecto {
    class proyecto.InfoVehicleFrame {
    }
  }
  

  namespace proyecto {
    class proyecto.InfoVehicleGUI {
    }
  }
  

  namespace proyecto {
    class proyecto.LogisticaGUI {
    }
  }
  

  namespace proyecto {
    class proyecto.LogisticaGUIFrame {
    }
  }
  

  namespace proyecto {
    class proyecto.Node {
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      class proyecto.vehiculos.Camion {
      }
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      class proyecto.vehiculos.Coche {
      }
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      class proyecto.vehiculos.Moto {
      }
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      abstract class proyecto.vehiculos.Vehiculo {
      }
    }
  }
  

  proyecto.AStar o-- proyecto.Graph : graph_
  proyecto.AgregarVehiculoGUI -up-|> javax.swing.JPanel
  proyecto.AgregarVehiculoGUIFrame -up-|> javax.swing.JFrame
  proyecto.AgregarVehiculoGUIFrame o-- proyecto.AgregarVehiculoGUI : agregarVehiculoGUI
  proyecto.InfoVehicleFrame -up-|> javax.swing.JFrame
  proyecto.InfoVehicleFrame o-- proyecto.InfoVehicleGUI : infoVehicleGUI
  proyecto.InfoVehicleGUI -up-|> javax.swing.JPanel
  proyecto.InfoVehicleGUI o-- proyecto.vehiculos.Vehiculo : vehiculo
  proyecto.LogisticaGUI -up-|> javax.swing.JPanel
  proyecto.LogisticaGUIFrame -up-|> javax.swing.JFrame
  proyecto.LogisticaGUIFrame o-- proyecto.LogisticaGUI : logisticaGUI
  proyecto.Node o-- proyecto.Node : father_node
  proyecto.vehiculos.Camion -up-|> proyecto.vehiculos.Vehiculo
  proyecto.vehiculos.Coche .up.|> java.lang.Runnable
  proyecto.vehiculos.Coche -up-|> proyecto.vehiculos.Vehiculo
  proyecto.vehiculos.Moto .up.|> java.lang.Runnable
  proyecto.vehiculos.Moto -up-|> proyecto.vehiculos.Vehiculo
  proyecto.vehiculos.Vehiculo .up.|> java.lang.Runnable
  proyecto.vehiculos.Vehiculo o-- proyecto.Graph : map
  proyecto.vehiculos.Vehiculo o-- proyecto.AStar : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
